# yta-cli

./: .gitignore  Cargo.toml  README.md
src/: download.rs  error.rs  main.rs  playlist.rs  queue.rs  search.rs  utils.rs
